--- a/README
+++ b/README
@@ -1,13 +1,22 @@
 Mathcha
 =======
 
-Introduction goes here.
+Mathcha is a horribly-named, arithmetic-based, text-driven captcha. Why you ask? For very few good reasons:
+
+* I had never written a plugin.
+* I wanted to play with a few bits of technology I hadn't touched: git, github, gemcutter, gem packaging, jeweler, etc.
+* I really like Recaptcha it's just that I've seen a few folk using simple math problems and it's
+* I need this functionality across a few applications I've been working on.
+
+This thing is nascent, fledgling, and was produced in a matter of hours. I haven't thoroughly tested it yet so don't put too much faith in it. Please feel free to fork and dress up. I plan on staying on top of this over the next few weeks and getting something put together that I'm happy to push on my peers.
 
 
 Example
 =======
 
-Example goes here.
+* In your view: <%= mathcha_tag %>
+* In your controller: if (verify_mathcha(params))
+* More soon.
 
 
-Copyright (c) 2009 [name of plugin creator], released under the MIT license
+Copyright (c) 2009 Cory Wilkerson, released under the MIT license
